Fixes the hover state on the home CTA buttons. Unfortunately, the contrast requirements hamper our ability to show a distinct change on hover but, so be it. [Fixes #9]

--- a/_scss/components/home-ctas.scss
+++ b/_scss/components/home-ctas.scss
@@ -22,10 +22,17 @@
 
 .usajobs-help-center-home-get-started,
 .usajobs-help-center-home-about-usajobs {
-  @mixin invertButton($btn-color: $color-white) {
+  @mixin invertButton() {
+    $btn-color: $color-white;
+    $hover-color: $color-gray-lightest;
     box-shadow: inset 0 0 0 2px $btn-color;
     color: $btn-color;
     background-color: inherit;
+
+    &:hover {
+      box-shadow: inset 0 0 0 2px $hover-color;
+      color: $hover-color;
+    }
   }
 
   padding: $size-default $size-M;
