--- a/css/usajobs-help-center.css
+++ b/css/usajobs-help-center.css
@@ -11741,6 +11741,12 @@ h6 {
   background-color: inherit;
 }
 
+.usajobs-help-center-home-get-started__button.usa-button-outline:hover,
+.usajobs-help-center-home-about-usajobs__button.usa-button-outline:hover {
+  box-shadow: inset 0 0 0 2px #f1f1f1;
+  color: #f1f1f1;
+}
+
 .usajobs-help-center-home-get-started {
   background-color: #0071bc;
 }
